Made a indexpage and added a HERO partial. Issues: The hero originally overflows the navbar. by giving it a margin og 6% it looks ok, but there will be some problems in the future with wider and larger screens. Issue: The hero overflows the navbar on smaller screens.

--- a/public/styles.css
+++ b/public/styles.css
@@ -68,3 +68,7 @@ img {
 .modal {
 	display: block !important;
 }
+
+.indexContainer{
+	margin-top: 6%;
+}
